ci: pass allowed command via cli

--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -30,3 +30,4 @@ jobs:
         env:
           LOG_LEVEL: debug
           RENOVATE_REPOSITORIES: ${{ github.repository }}
+          RENOVATE_ALLOWED_COMMANDS: "^nix"
